CHANGELOG
=========

* 1.1.x

  * [BC break] Fonction Twig crud_display_config(CrudManager $crud, $ajax_options = array(), $image_url = 'ecr/images/i16/list.png')
    remplacée par crud_display_config(CrudManager $crud, $modal = true, $ajax_options = array(), $image_url = 'ecr/images/i16/list.png')