@@ -1,0 +1,31 @@
+<?php
+
+/*
+ * This file is part of the EcommitCrudBundle package.
+ *
+ * (c) E-commit <contact@e-commit.fr>
+ *
+ * For the full copyright and license information, please view the LICENSE
+ * file that was distributed with this source code.
+ */
+
+namespace Ecommit\CrudBundle\DependencyInjection\Compiler;
+
+use Symfony\Component\DependencyInjection\ContainerBuilder;
+use Symfony\Component\DependencyInjection\Compiler\CompilerPassInterface;
+
+class TwigFormPass implements CompilerPassInterface
+{
+
+    public function process(ContainerBuilder $container)
+    {
+        if (!$container->hasParameter('twig.form.resources'))
+        {
+            return;
+        }
+
+        $container->setParameter('twig.form.resources', array_merge(
+                        $container->getParameter('twig.form.resources'), array('EcommitCrudBundle:Form:type.html.twig')
+                ));
+    }
+}
