@@ -1,0 +1,61 @@
+{% use 'form_div_layout.html.twig' %}
+{% block entity_picker_widget %}
+{% spaceless %}
+    {{ form_widget(form.text, { 'attr': {'disabled': 'disabled'} }) }}
+    {{ form_widget(form.key) }}
+    <img src="{{ asset(image_list) }}" id="{{id}}_img_list" style="margin-left: 5px; cursor: pointer;" alt="list" />
+    {% if add_enabled %}
+        <img src="{{ asset(image_add) }}" id="{{id}}_img_add" style="margin-left: 5px; cursor: pointer;" alt="add" />
+    {% endif %}
+
+    <script type="text/javascript">
+    function picker_update_{{ id }}(key, text)
+    {
+        $('#{{ form.children.key.vars.id }}').val(key);
+        $('#{{ form.children.text.vars.id }}').val(text);
+        var api = $("#{{modal_id}}").data("overlay");
+        api.close();
+    }
+    function picker_open_{{ id }}()
+    {
+        $('#{{modal_id}} tbody tr').live('click', function() {
+            picker_update_{{ id }}($(this).attr('data-key'), $(this).attr('data-text'));
+            return false;
+        });
+    }
+    function picker_close_{{ id }}()
+    {
+        $('#{{modal_id}} tbody tr').die('click');
+    }
+    $().ready(function() {
+        $('#{{id}}_img_list').bind('click', function() {
+            {{ crud_remote_modal(modal_id, list_url, 
+                'picker_close_'~id~'();', 
+                {
+                    'success': 'picker_open_'~id~'();'
+                }
+            ) }}
+        });
+        {% if add_enabled %}
+        $('#{{id}}_img_add').bind('click', function() {
+            {{ crud_remote_modal(modal_id, add_url) }}
+        });
+        $('#{{id}}_img_add').ajaxComplete(function(e, xhr, settings){
+            if(xhr.responseText && xhr.status == 200)
+            {
+                var data = xhr.responseText;
+                if(data.substr(0,1) == '{')
+                {
+                    data = $.parseJSON(data);
+                    if(data.pickup && $.inArray('{{id}}', data.pickup) != -1)
+                    {
+                        picker_update_{{ id }}($('<div />').html(data.key).text(), $('<div />').html(data.text).text());
+                    }
+                }
+            }
+        });
+        {% endif %}
+    });
+    </script>
+{% endspaceless %}
+{% endblock %}
