@@ -3,5 +3,6 @@ CHANGELOG
 
 * 1.1.x
 
+  * Ajout Form Field "entity_picker"
   * [BC break] Fonction Twig crud_display_config(CrudManager $crud, $ajax_options = array(), $image_url = 'ecr/images/i16/list.png')
     remplacée par crud_display_config(CrudManager $crud, $modal = true, $ajax_options = array(), $image_url = 'ecr/images/i16/list.png')
